// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot for danger 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
    role="alert"
  >
    <p
      class="mb-0 small"
    >
      There is an error
    </p>
    <p
      class="mb-0 small"
    >
      stop and fix
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot for success 1`] = `
<DocumentFragment>
  <div
    class="alert alert-success"
    role="alert"
  >
    <p
      class="mb-0 small"
    >
      Everything is fine
    </p>
    <p
      class="mb-0 small"
    >
      It all works!
    </p>
  </div>
</DocumentFragment>
`;
